[tool.poetry]
name = "seb-dev-libraries"
version = "0.1.0"
description = ""
authors = ["Sebastian Wdowiarz <wdowiarzsebastian@gmail.com>"]
readme = "README.md"
packages = [{include = "seb_dev_libraries"}]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "3.3.3"
pyupgrade = "3.9.0"
black = "23.7.0"
isort = "5.12.0"
flake8 = "6.0.0"
mypy = "1.4.1"
flake8-builtins = "2.1.0"
flake8-bugbear = "23.7.10"
flake8-comprehensions = "3.14.0"
flake8-docstrings = "1.7.0"
pydocstyle = "6.3.0"
flake8-noqa = "1.3.2"
pep8-naming = "0.13.3"
pyflakes = "3.0.1"
pycodestyle = "2.10.0"
mccabe = "0.7.0"
pytest = "7.4.0"
pytest-cov = "4.1.0"
dotenv-linter = "0.4.0"
pre-commit-hooks = "4.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ['py39']

[project.urls]
"Homepage" = "https://github.com/mangekyousharingan/seb-dev-libraries"

[project]
requires-python = "^3.11"
